styles/main.css
/* Notice */
.notice {
	background-color: #F0C948;
	color: black;
	text-align: center;
	margin: 0;
	border: 10px dashed #A38931;
}

.back-to-top-button {
	width: 50px;
	height: 50px;
	background-color: #DC82D2;
	border: 5px solid #B46EAA;
	display: flex;
	justify-content: center;
	align-items: center;
	color: white;
	border-radius: 50%;
	position: fixed;
	bottom: 5%;
	right: 5%;
}

.back-to-top-button i {
	font-weight: bold;
	font-size: 2rem;
	-webkit-text-stroke: 2px;
}

/* Header-related styling */

.header {
	background-color: #000000;
	padding: 10px;
	color: white;
	position: sticky;
	top: 0;
}

.header-content {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

#header-title {
	font-size: 1.5rem;
	display: inline;
}

.header-icons-container {
	display: flex;
	gap: 10px;
}

.header-icon {
	height: 50px;
	width: 50px;
	border: 5px solid #2D2D32;
	display: flex;
	justify-content: center;
	align-items:　center;
	font-size: 2rem;
}

i {
	margin: auto;
}

a {
	text-decoration: none;
	color: white;
	display: block;
}

img {
	margin: 10px;
	border: 5px solid #525C66;
	border-radius: 5px;
}

table {
	background-color: #505A64;
	border-spacing: 10px;
	border: 5px solid #788C9B;
	width: 100%;
	text-align: center;
}

/* Footer-related styling */

.footer {
	background-color: #000000;
	padding: 10px;
	color: white;
	flex-shrink: 0;
}

/* Table of contents */
.table-of-contents-container {
	background-color: #788C9B;
	border: 5px solid #525C66;
	padding: 20px;
	display: inline-block;
	margin: 20px 0px;
}

.table-of-contents-list, .table-of-contents-list li {
	font-weight: bold;
	list-style-type: none;
	margin: 20px;
	padding: 0;
}

/* Everything else */

html {
	height: 100%;
	overflow: auto;
}

body {
	margin: 0;
	padding: 0;
	font-family: sans-serif;
	background-color: #1E2832;
	display: flex;
	flex-direction: column;
	height: 100%;
	width: 100%;
	overflow: auto;
}

main {
	flex: 1 0 auto;
	color: white;
	padding: 20px;
}

/* Subjects */
.math {
	background-color: #CC0000;
}

.science {
	background-color: #0ACD00;
}

.english {
	background-color: #9100CD;
}

.filipino {
	background-color: #CD7800;
}

.ap {
	background-color: #0037CD;
}

.computer {
	background-color: #643C28;
}

.music {
	color: #000000;
	background-color: #E5CD00;
}

.arts {
	color: #000000;
	background-color: #B3A424;
}

.pe {
	color: #000000;
	background-color: #807833;
}

.health {
	color: #000000;
	background-color: #4C492E;
}

.specs {
	background-color: #9B461E;
}

.ve {
	color: #000000;
	background-color: #FFFFFF;
}

.mapeh {
	color: #000000;
	background-color: #E6E100;
}

.unavailable {
	color: white;
	background-color: #788C9B;
}

@media (max-width: 900px) {
	.header-icons-container {
		display: none;
	}
}

@media (max-width: 480px) {
	.table-of-contents-list, .table-of-contents-list li {
		margin: 5px;
	}
}

